Fix cards alignment

--- a/src/Components/MentorCard/MentorCard.module.css
+++ b/src/Components/MentorCard/MentorCard.module.css
@@ -1,5 +1,5 @@
 .mentor_card_container {
-  margin-top: 4rem;
+  margin-top: 3rem;
   max-width: 400px;
   box-shadow: 1px 1px 45px -5px rgba(0, 0, 0, 0.08);
   -webkit-box-shadow: 1px 1px 45px -5px rgba(0, 0, 0, 0.08);
@@ -59,15 +59,14 @@
   font-size: 0.95rem;
 }
 
-.linkedinimg
-{
+.linkedinimg {
   height: 1.75rem;
   width: 1.75rem;
   margin-top: 0.5rem;
 }
 
 
-.textdiv{
+.textdiv {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
